style(ng): fix h2 spacing within stats page

--- a/apps/bulbutin-ng/src/app/model-chart/model-chart.scss
+++ b/apps/bulbutin-ng/src/app/model-chart/model-chart.scss
@@ -4,7 +4,6 @@
   display: block;
   width: 100%;
   height: 400px;
-  margin: 20px 0;
 
   @include mi.neumorphism(true);
 }
@@ -13,7 +12,6 @@
   display: none;
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
   color: var(--text-color);
   @include mi.neumorphism(true);
 
