--- a/apps/bulbutin-ng/src/app/state-chart/state-chart.scss
+++ b/apps/bulbutin-ng/src/app/state-chart/state-chart.scss
@@ -4,6 +4,5 @@
   display: block;
   width: 100%;
   height: 400px;
-  margin: 20px 0;
   @include mi.neumorphism(true);
 }
