--- a/apps/bulbutin-ng/src/app/stats/stats.scss
+++ b/apps/bulbutin-ng/src/app/stats/stats.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   h2 {
-    margin: 24px 0px;
+    margin: 32px 0px 10px 0px;
     color: var(--text-color);
   }
 
@@ -22,7 +22,6 @@
   gap: 16px;
   width: 100%;
   margin-top: 16px;
-  margin-bottom: 24px;
 }
 
 .altitude-totals {
